--- a/pages/buttons.css
+++ b/pages/buttons.css
@@ -178,24 +178,35 @@
   ========================
   */
   .btn.primary {
-    background: white;
-    color: black;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 1px;
-    font-size: 1rem;
-    
-    
-    
+      background: none;
+      border: solid 2px #fcfcfc;
+      color: #fffefd;
+      cursor: pointer;
+      display: inline-block;
+      font-family: 'Helvetica', Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: bold;
+      outline: none;
+      padding: 20px 35px;
+      text-transform: uppercase;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      -ms-transition: all 0.3s;
+      -o-transition: all 0.3s;
+      transition: all 0.3s;
   }
 
+  .btn.primary:hover {
+    background: #474544;
+    color: #F2F3EB;}
+
       /* 
-  ========================
+  /* ========================
         BUTTON FOUR
   ========================
   */
   
-  .btn.secondary {
+  /* .btn.secondary {
     background: transparent;
     border: 1px solid white;
     color: white;
@@ -203,4 +214,4 @@
     font-weight: bold;
     letter-spacing: 1px;
     font-size: 1rem;
-  }
+  } */ 
