--- a/pages/about.css
+++ b/pages/about.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Nunito";
+  font-family: "Abel", sans-serif;
 }
 
 body {
@@ -16,6 +16,7 @@ body {
   position: relative;
   max-width: 1200px;
   margin: 100px auto;
+  padding-top: 5rem;
 }
 
 .container {
