--- a/pages/about.css
+++ b/pages/about.css
@@ -1,19 +1,30 @@
-.slogans-container {
+.about-us {
   display: flex;
   justify-content: space-around; 
   align-items: flex-start; 
   flex-wrap: wrap;
   gap: 20px;
-  padding: 20px;
-  max-width: 1200px;
+  padding: 7%;
+  max-width: 100vh;
   margin: 0 auto;
+  
+}
+.slogans-container {
+  display: flex;
+  justify-content: space-around; 
+  align-items: flex-start; 
+  flex-wrap: wrap;
+  padding: 7%;
+  width: 100%;
+  margin: 0 auto;
+  background-color: #AD8B73;
 }
 
 .slogan {
   flex: 1;
   min-width: 250px;
   text-align: center;
-  padding: 15px;
+  padding: 7%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,16 +44,24 @@
 
 .slogan p {
   font-size: 1rem;
-  color: #666;
+  color: #000000;
   line-height: 1.4;
   margin-bottom: 10px; 
 }
 
 .how-to-do{
-height: 100vh;
+ padding:7%;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  min-height: 100vh;
+
 }
 .how-to-do h1{
-  padding:10%;
+  /* padding:10%; */
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 2rem;
