--- a/pages/about.css
+++ b/pages/about.css
@@ -3,12 +3,19 @@
   justify-content: space-around; 
   align-items: flex-start; 
   flex-wrap: wrap;
-  gap: 20px;
-  padding: 9%;
-  max-width: 100vh;
+  gap: 7%;
+  padding: 10%;
+  width: 100vh;
   margin: 0 auto;
-  
 }
+.about-us h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #000;
+  justify-content: center;
+  text-align: center;
+} 
+
 .slogans-container {
   display: flex;
   justify-content: space-around; 
@@ -179,21 +186,23 @@
 
 @media (max-width: 768px) {
   .wrapper {
-    flex-direction: column;
-    align-items: center;
-    padding: 10%;
+    flex-wrap: wrap;
+    height: auto;
+    padding: 20px;
   }
   
   .box {
+    margin: 10px !important;
     width: 100%;
-    max-width: 300px;
-    margin-left: 0 !important;
-    margin-bottom: 30px;
+    width: 200px;
+    height: auto;
+    min-height: 280px;
   }
   
   .box:hover ~ .box {
     left: 0;
   }
+  
 }
   @media screen and (max-width: 1024px) {
   .wrapper {
@@ -206,5 +215,7 @@
     flex-direction:row;
   }
 
+  
+  
 
 }
