--- a/pages/about.css
+++ b/pages/about.css
@@ -1,21 +1,22 @@
 .about-us {
+  position: relative;
   display: flex;
   justify-content: space-around; 
   align-items: flex-start; 
   flex-wrap: wrap;
-  gap: 7%;
-  padding: 10%;
-  width: 100vh;
+  flex-direction: column;
+  gap: 20px;
+  padding: 9%;
+  width: 100%;
   margin: 0 auto;
 }
+
 .about-us h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #000;
-  justify-content: center;
   text-align: center;
-  flex-wrap: wrap;
-} 
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #000;
+}
 
 .slogans-container {
   display: flex;
@@ -71,7 +72,7 @@
 .how-to-do h1{
   /* padding:10%; */
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
   color: #000;
 }
