--- a/pages/contact.css
+++ b/pages/contact.css
@@ -6,7 +6,7 @@
 
 .contact-info {
   width: 100%;
-  padding: 5rem;
+  /* padding: 5rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
 
 .contact-container {
   width: 100%;
-  max-width: 100vh; 
+  max-width: 100%; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,7 +84,7 @@
   
   .contact-map, .contact-info-add {
     width: 100%;
-    margin-left: -7%;
+    /* margin-left: -7%; */
   }
   
   .contact-title h1 {
