--- a/pages/contact.css
+++ b/pages/contact.css
@@ -6,7 +6,6 @@
 
 .contact-info {
   width: 100%;
-  /* padding: 5rem; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,7 +83,6 @@
   
   .contact-map, .contact-info-add {
     width: 100%;
-    /* margin-left: -7%; */
   }
   
   .contact-title h1 {
@@ -181,6 +179,7 @@ input[type='text']:focus, [type='email']:focus, textarea:focus {
 select {
   background: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png') no-repeat right;
   outline: none;
+  appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
 }
@@ -194,13 +193,6 @@ select::-ms-expand {
 }
 
 .telephone {
-  width: 100%;
-}
-
-textarea {
-	line-height: 150%;
-	height: 150px;
-	resize: none;
   width: 100%;
 }
 
