--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     height: 100vh;
     position: relative;
     overflow: hidden;
+    gap: 5vh;
   }
   
   .hero-banner img {
@@ -17,6 +18,8 @@ body {
     height: 100%;
     object-fit: cover;
     filter: brightness(25%);
+    position: relative;
+ 
   }
   
   .hero-text {
@@ -29,7 +32,7 @@ body {
     flex-wrap: wrap;
     color: white;
     z-index: 1;
-    padding: 20px;
+    padding: 20%;
     width: 100%;
     box-sizing: border-box;
     gap:2rem;
@@ -43,7 +46,7 @@ body {
     flex-wrap: wrap;
     box-sizing: border-box;
     width: 100%;
-    top: 4%;
+    top: 9%;
   }
   
   .white-logo-banner img {
@@ -366,7 +369,7 @@ body {
         border-top: 1px solid #444;
     }
 
-    @media screen and (max-width: 401px) {
+    @media screen and (max-width: 501px) {
         .white-logo-banner {
             visibility: hidden;
           }
@@ -375,8 +378,14 @@ body {
 
     @media screen and (max-width: 601px) {
     .hero-banner{
-            height: 800px;
+            height: 100vh;
+            gap: 5vh;
         }
+        .white-logo-banner {
+          width: 75px;
+          height: 75px;
+          gap: 5vh;
+          } 
     .figure-title {
       margin-bottom: 1.5rem;
     }
@@ -399,11 +408,12 @@ body {
         @media screen and (max-width: 768px) {
             .hero-banner{
                 height: 800px;
-            }
+                gap: 2vh;
+              }
+            
             .white-logo-banner {
-                max-width: 30%;
-                min-width: 25%;
-                max-height: 30%;
+              width: 100px;
+              height: 100px;
               } 
     
     
@@ -479,6 +489,8 @@ body {
                 font-size: 0.9rem; 
               }
             }
+
+            
           
         
 
@@ -553,4 +565,6 @@ body {
         figure figcaption p {
             font-size: 0.9rem;
           }
+          .hero-banner {
+            gap: 2vh;}
         }
