--- a/pages/produts.css
+++ b/pages/produts.css
@@ -73,7 +73,7 @@
     height: 360px;
   }
   
-  .container {
+  .container-products {
     --rX: 0;
     --rY: 0;
     --bX: 50%;
@@ -109,7 +109,7 @@
                      url('/components/photos/jar-small.png');
   }
   
-  .container p {
+  .container-products p {
     color: rgba(255,255,255,0.9);
     font-size: 1.5rem;
     font-weight: bold;
@@ -117,8 +117,8 @@
   }
   
   /* Corner borders effect */
-  .container::before,
-  .container::after {
+  .container-products::before,
+  .container-products::after {
     content: "";
     width: 20px;
     height: 20px;
@@ -129,28 +129,28 @@
     transition: all 0.3s ease;
   }
   
-  .container::before {
+  .container-products::before {
     top: 1rem;
     right: 1rem;
     border-bottom-width: 0;
     border-left-width: 0;
   }
   
-  .container::after {
+  .container-products::after {
     bottom: 1rem;
     left: 1rem;
     border-top-width: 0;
     border-right-width: 0;
   }
   
-  .wrap:hover .container::before,
-  .wrap:hover .container::after {
+  .wrap:hover .container-products::before,
+  .wrap:hover .container-products::after {
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
     opacity: 0.8;
   }
   
-  .container--active {
+  .container-products--active {
     transition: none;
   }
   
