--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Abel&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Lilita+One&display=swap');
-
 :root {
 	--color-black: hsl(0, 0%, 10%);
 	--color-white: hsl(0, 0%, 100%);
@@ -112,7 +110,7 @@ video {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: auto;
+	max-height: 8rem;
 	z-index: 100;
 }
 
